# trabajo-final-gestion-stock

./: .env.dist  README.md  bootstrap.py  diagramas.drawio  docker-compose.yml  gui.ui  pyproject.toml
Aplicacion/Banco/: banco_dto.py  servicio_banco.py
Aplicacion/Categoria/: categoria_dto.py  servicio_categoria.py
Aplicacion/CategoriasProductos/: servicio_categorias_productos.py
Aplicacion/Cliente/: cliente_dto.py  servicio_cliente.py
Aplicacion/Compra/: compraDTO.py  servicio_compra.py
Aplicacion/DetalleCompra/: detalleCompraDTO.py  servicio_detalle_compra.py
Aplicacion/DetalleVenta/: detalleVentaDTO.py  servicio_detalle_venta.py
Aplicacion/Localidad/: localidad_dto.py  servicio_localidad.py
Aplicacion/Producto/: producto_dto.py  servicio_producto.py
Aplicacion/Proveedor/: proveedor_dto.py  servicio_proveedor.py
Aplicacion/Provincia/: servicio_provincia.py
Aplicacion/Venta/: servicio_venta.py  ventaDTO.py
Dominio/: Banco.py  categoria.py  cliente.py  detalle_compra.py  detalle_venta.py  localidad.py  producto.py  proveedor.py  provincia.py
Gui/: aplicacion.py  trabajo.py  ui.py
Infraestructura/MySQL/Banco/: RepositorioBanco.py
Infraestructura/MySQL/Categoria/: RepositorioCategoria.py
Infraestructura/MySQL/CategoriaIva/: RepositorioCategoriaIva.py
Infraestructura/MySQL/CategoriasProductos/: RepositorioCategoriasProductos.py
Infraestructura/MySQL/Cliente/: RepositorioCliente.py
Infraestructura/MySQL/Compra/: RepositorioCompra.py
Infraestructura/MySQL/DetalleCompra/: RepositorioDetalleCompra.py
(+9 files in other folders)
